--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -1,9 +1,14 @@
 
 body {
   background: url("/images/navbkgd.png") left top repeat-x, url("../images/bkgd.gif") left top repeat;
-  padding-top: 135px; /* 160px to make the container go all the way to the bottom of the topbar */
+  padding-top: 129px; /* 129px to make the container go all the way to the bottom of the topbar */
   font-family: $font-family;
   height:100%;
+}
+
+//HACK - we should increase widget size and margins slightly instead of this padding
+.row-static {
+  padding: 0 5px;
 }
 
 // Welcome ID overwrites body so there isn't a navbar. Could also be called 'loggedOut'
